# rustlab-2020-workshop-yew-rocket

./: .gitignore  README.md  WORKSHOP.md
code/: Cargo.toml
code/album-db/: Cargo.toml
code/album-db/src/: lib.rs
code/album-server/: .gitignore  Cargo.toml
code/album-server/src/: api.rs  main.rs
code/album-ui/: .gitignore  Cargo.toml  webpack.config.js
code/album-ui/src/: app.rs
code/album-ui/src/app/: components.rs  worker.rs
code/album-ui/src/app/components/: preview.rs
code/album-ui/static/: index.html  style.scss
