[package]
name = "album-ui"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-logger = "0.2"
wee_alloc = { version = "0.4" }
yew = { git = "https://github.com/yewstack/yew.git", tag = "0.17.3" }
yew-router = { git = "https://github.com/yewstack/yew.git", tag = "0.17.3" }
yewtil = { git = "https://github.com/yewstack/yew.git", tag = "0.17.3", features = ["pure"] }
web-sys = { version = "0.3" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
mock_http = []
